--- a/ICSharpCode.Decompiler/ICSharpCode.Decompiler.csproj
+++ b/ICSharpCode.Decompiler/ICSharpCode.Decompiler.csproj
@@ -20,6 +20,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2011-$([System.DateTime]::Now.Year) AlphaSierraPapa</Copyright>
     <PackageTags>C# Decompiler ILSpy</PackageTags>
+    <PackageVersion>0.0.1</PackageVersion>
 
     <NeutralLanguage>en-US</NeutralLanguage>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
@@ -697,16 +698,16 @@
       <UpdateAssemblyInfo>powershell -NoProfile -ExecutionPolicy Bypass -File BuildTools/update-assemblyinfo.ps1 $(Configuration)</UpdateAssemblyInfo>
       <GitRevParse>git rev-parse HEAD^^{commit}</GitRevParse>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-      <UpdateAssemblyInfo>pwsh -NoProfile -ExecutionPolicy Bypass -File BuildTools/update-assemblyinfo.ps1 $(Configuration)</UpdateAssemblyInfo>
-      <GitRevParse>git rev-parse HEAD^{commit}</GitRevParse>
-    </PropertyGroup>
+<!--    <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">-->
+<!--      <UpdateAssemblyInfo>pwsh -NoProfile -ExecutionPolicy Bypass -File BuildTools/update-assemblyinfo.ps1 $(Configuration)</UpdateAssemblyInfo>-->
+<!--      <GitRevParse>git rev-parse HEAD^{commit}</GitRevParse>-->
+<!--    </PropertyGroup>-->
     <ReadLinesFromFile ContinueOnError="true" File="@(UpdateAssemblyInfoStamp)">
       <Output TaskParameter="Lines" PropertyName="LastCommitHash" />
     </ReadLinesFromFile>
-    <Exec ContinueOnError="true" WorkingDirectory=".." Command="$(GitRevParse)" ConsoleToMSBuild="true">
-      <Output TaskParameter="ConsoleOutput" PropertyName="CommitHash" />
-    </Exec>
+<!--    <Exec ContinueOnError="true" WorkingDirectory=".." Command="$(GitRevParse)" ConsoleToMSBuild="true">-->
+<!--      <Output TaskParameter="ConsoleOutput" PropertyName="CommitHash" />-->
+<!--    </Exec>-->
     <Exec WorkingDirectory=".." Command="$(UpdateAssemblyInfo)" Timeout="60000" Condition="'$(CommitHash)'!='$(LastCommitHash)'" LogStandardErrorAsError="true" ContinueOnError="false" />
     <WriteLinesToFile Lines="$(CommitHash)" File="@(UpdateAssemblyInfoStamp)" Overwrite="true" Condition="'$(CommitHash)'!='$(LastCommitHash)'" />
     <ReadLinesFromFile ContinueOnError="true" File="..\VERSION">
